# misinfo-detector

./: README.md
googe/: CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
googe/config/: config.yaml  neo4j_schema.cypher
googe/data/: sample_claims.json
googe/notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_evaluation.ipynb
googe/scripts/: run_mvp.sh  seed_data.py
googe/src/: __init__.py  config.py  exceptions.py  types.py
googe/src/api/: __init__.py  dependencies.py  main.py  models.py
googe/src/api/routes/: __init__.py  assessments.py  claims.py  graphs.py  ws.py
googe/src/dashboard/: __init__.py  app.py
googe/src/graph/: __init__.py  claim_graph.py  graph_store.py
googe/src/ingestion/: __init__.py  base.py  mock_source.py
googe/src/models/: __init__.py  base.py
googe/src/models/gnn/: __init__.py  graphsage.py
googe/src/models/scoring/: __init__.py  explainer.py  risk_calculator.py
googe/src/models/temporal/: __init__.py  lstm_predictor.py
googe/src/preprocessing/: __init__.py  embedding_encoder.py
googe/src/storage/: __init__.py  claim_repository.py  graph_repository.py
googe/src/streaming/: __init__.py  event_queue.py  realtime_detection.py
googe/tests/: conftest.py
googe/tests/unit/: test_claim_graph.py  test_risk_calculator.py  test_types.py
